Fixed z-index for image

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -23,6 +23,8 @@
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
+  position: relative; /*Position: relative for z-index*/
+  z-index: 200;
 }
 
 .header__span-accent {
@@ -33,6 +35,8 @@
   font-size: 60px;
   line-height: 72px;
   color: #2f80ed;
+  position: relative; /*Position: relative for z-index*/
+  z-index: 200;
 }
 
 .header__description {
@@ -43,6 +47,8 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  position: relative; /*Position: relative for z-index*/
+  z-index: 200;
 }
 
 .header__image {
@@ -50,6 +56,7 @@
   right: 5px;
   top: 124px;
   max-width: 646px;
+  z-index: 1;
 }
 
 .header__footer {
